feat: add important update field
